# dotfiles

./: .Xresources  .bashrc  .library_of_babel.org  .nvimrc  .spacemacs  .stalonetrayrc  .tmux.conf  .vimrc  .xinitrc  README.md  gws-template.hsfiles
.config/: compton.conf  picom.conf
.config/bspwm/: autostart  bspwmrc
.config/diagrams/: plot_theme.hs
.config/diagrams/plot-theme/: plot-theme.cabal  stack.yaml
.config/dunst/: dunstrc
.config/emacs/: early-init.el  init.el
.config/fish/: config.fish  fish_history  fishd.ifthenelse
.config/hypr/: hyprland.conf  special_workspaces.sh  wallpaper.sh
.config/i3blocks/: i3blocks.conf
.config/i3status/: config
.config/inkscape/keys/: gws.xml
.config/iosevka/: private-build-plans.toml
.config/kitty/: kitty.conf
.config/latexindent/: .indentconfig.yaml  .mysettings.yaml
.config/niri/: move_window.sh  toggle_program.sh  wkill.sh  work_open.sh
.config/nvim/: init.vim
.config/sxhkd/: .xinitrc  sxhkdrc
.config/taffybar/: taffybar.css  taffybar.hs  taffybar.rc
.config/termite/: config
.config/twmn/: twmn.conf
.config/vale/: .vale.ini
.config/waybar/: config  style.css
.i3/: config
.xmonad/: build  startup  xmobar.hs  xmonad.desktop  xmonad.hs
emacs/: .library_of_babel.org  beamer-setup.org  init.el  ox-beamer-grid.el
emacs/snippets/haskell-mode/: nixHaskellPlotScript  nixHaskellPlotStdScript  nixHaskellScript  stackscript  stackscriptplot
latex/: paper_template.tex
scripts/: bar_info.sh  battery_check.sh  get_color_scheme.sh  swm_boot.sh
