name:                plot-theme
version:             0.1.0.0
synopsis:            Publishable theme for plots.
description:         Please see README.org
homepage:            http://github.com/GregorySchwartz/plot-theme#readme
license:             GPL-3
license-file:        LICENSE
author:              Gregory W. Schwartz
maintainer:          gsch@mail.med.upenn.edu
copyright:           2017 Gregory W. Schwartz
category:            Bioinformatics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Plots.Theme
  build-depends:       base >= 4.7 && < 5
                     , diagrams
                     , diagrams-lib
                     , plots
                     , transformers
  ghc-options:         -O2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/GregorySchwartz/plot-theme
